// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InformationTable renders correctly 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 MuiTableContainer-root table_container css-1qr0el0-MuiPaper-root-MuiTableContainer-root"
>
  <h1
    className="title"
  >
    TEST TITLE
  </h1>
  <table
    aria-label="simple table"
    className="MuiTable-root css-rqglhn-MuiTable-root"
    role={null}
  >
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-34nofg-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium table_key_cell css-1ex1afd-MuiTableCell-root"
          scope="row"
        >
          A
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          1
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          3
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-34nofg-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium table_key_cell css-1ex1afd-MuiTableCell-root"
          scope="row"
        >
          B
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          2
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          4
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`InformationTable renders correctly with no title 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 MuiTableContainer-root table_container css-1qr0el0-MuiPaper-root-MuiTableContainer-root"
>
  <table
    aria-label="simple table"
    className="MuiTable-root css-rqglhn-MuiTable-root"
    role={null}
  >
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-34nofg-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium table_key_cell css-1ex1afd-MuiTableCell-root"
          scope="row"
        >
          A
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          1
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          3
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-34nofg-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium table_key_cell css-1ex1afd-MuiTableCell-root"
          scope="row"
        >
          B
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          2
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium table_value_cell css-177gid-MuiTableCell-root"
        >
          4
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
